fix layout issue

--- a/themes/sgsc/sass/_archive-gallery.scss
+++ b/themes/sgsc/sass/_archive-gallery.scss
@@ -29,6 +29,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: $margin-d;
+  width: 100%;
   .page-header {
     @include page-header;
   }
